GL/Projet_GL/src/test/deca/context/invalid/classes/not_super_class.deca
// Description:
//    Heritage invalide
//
// Resultats:
//    Ligne 7: Le type int n'est pas une classe.
//

class A extends int {
}

{
}